--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "9a61727e",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "4bc7dc96",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "5ea663cf",
    "metadata": {},
    "outputs": [],
@@ -131,10 +131,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "e518f73c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Выбрано изображений: 5\n",
+      "Загружена модель: YOLOv8n\n",
+      "Загружена модель: Our Model\n",
+      "Тестируем изображение 1/5: img_001076.jpg\n",
+      "  YOLOv8n: 2 детекций\n",
+      "  Our Model: 1 детекций\n",
+      "  Результат сохранен: compare_img_001076.png\n",
+      "\n",
+      "Тестируем изображение 2/5: img_003315.jpg\n",
+      "  YOLOv8n: 1 детекций\n",
+      "  Our Model: 1 детекций\n",
+      "  Результат сохранен: compare_img_003315.png\n",
+      "\n",
+      "Тестируем изображение 3/5: img_009032.jpg\n",
+      "  YOLOv8n: 1 детекций\n",
+      "  Our Model: 1 детекций\n",
+      "  Результат сохранен: compare_img_009032.png\n",
+      "\n",
+      "Тестируем изображение 4/5: img_000970.jpg\n",
+      "  YOLOv8n: 0 детекций\n",
+      "  Our Model: 1 детекций\n",
+      "  Результат сохранен: compare_img_000970.png\n",
+      "\n",
+      "Тестируем изображение 5/5: img_005232.jpg\n",
+      "  YOLOv8n: 1 детекций\n",
+      "  Our Model: 1 детекций\n",
+      "  Результат сохранен: compare_img_005232.png\n",
+      "\n",
+      "Тестирование завершено\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    main()"
@@ -143,13 +179,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.4"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
