--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "9a61727e",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "id": "4bc7dc96",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "id": "5ea663cf",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "id": "e518f73c",
    "metadata": {},
    "outputs": [
@@ -142,30 +142,30 @@
       "Выбрано изображений: 5\n",
       "Загружена модель: YOLOv8n\n",
       "Загружена модель: Our Model\n",
-      "Тестируем изображение 1/5: img_001076.jpg\n",
-      "  YOLOv8n: 2 детекций\n",
-      "  Our Model: 1 детекций\n",
-      "  Результат сохранен: compare_img_001076.png\n",
-      "\n",
-      "Тестируем изображение 2/5: img_003315.jpg\n",
+      "Тестируем изображение 1/5: img_003601.jpg\n",
       "  YOLOv8n: 1 детекций\n",
       "  Our Model: 1 детекций\n",
-      "  Результат сохранен: compare_img_003315.png\n",
+      "  Результат сохранен: compare_img_003601.png\n",
       "\n",
-      "Тестируем изображение 3/5: img_009032.jpg\n",
+      "Тестируем изображение 2/5: img_009753.jpg\n",
       "  YOLOv8n: 1 детекций\n",
       "  Our Model: 1 детекций\n",
-      "  Результат сохранен: compare_img_009032.png\n",
+      "  Результат сохранен: compare_img_009753.png\n",
       "\n",
-      "Тестируем изображение 4/5: img_000970.jpg\n",
+      "Тестируем изображение 3/5: img_006441.jpg\n",
+      "  YOLOv8n: 1 детекций\n",
+      "  Our Model: 1 детекций\n",
+      "  Результат сохранен: compare_img_006441.png\n",
+      "\n",
+      "Тестируем изображение 4/5: img_002492.jpg\n",
       "  YOLOv8n: 0 детекций\n",
       "  Our Model: 1 детекций\n",
-      "  Результат сохранен: compare_img_000970.png\n",
+      "  Результат сохранен: compare_img_002492.png\n",
       "\n",
-      "Тестируем изображение 5/5: img_005232.jpg\n",
-      "  YOLOv8n: 1 детекций\n",
+      "Тестируем изображение 5/5: img_003971.jpg\n",
+      "  YOLOv8n: 0 детекций\n",
       "  Our Model: 1 детекций\n",
-      "  Результат сохранен: compare_img_005232.png\n",
+      "  Результат сохранен: compare_img_003971.png\n",
       "\n",
       "Тестирование завершено\n"
      ]
@@ -179,7 +179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -193,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
